# MoneroAndroidwallet

./: CONTRIBUTING.md  LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/root/monerotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Monero.cpp  Monero.h  native-lib.cpp
app/src/main/cpp/coffeecatch/: coffeecatch.c
app/src/main/java/com/example/root/monerotest/: AutoSyncBroadcast.java  BalanceFragment.java  DashboardFragment.java  DrawerItemClickListener.java  MainActivity.java  SettingActivity.java  Transaction.java  TransactionAdapter.java
app/src/main/java/com/example/root/monerotest/InitActivity/: InitActivity.java  InitFragment.java
app/src/main/java/com/example/root/monerotest/InitActivity/GenerateWallet/: GenerateWalletActivity.java  GenerateWalletFragment.java
app/src/main/java/com/example/root/monerotest/InitActivity/RestoreWallet/: RestoreWalletActivity.java  RestoreWalletFragment.java
app/src/main/java/com/example/root/monerotest/MenuFragments/: HeaderFragment.java  ReceiveFragment.java  SendFragment.java  SettingsFragment.java  SignFragment.java
app/src/main/java/com/example/root/monerotest/QRGenerator/: QRGeneratorActivity.java  QRGeneratorFragment.java
app/src/main/java/com/example/root/monerotest/QRReader/: QRReaderActivity.java  QRReaderFragment.java
app/src/main/java/com/example/root/monerotest/Services/: SyncWalletService.java
app/src/main/java/com/example/root/monerotest/Utils/: NotificationUtils.java
app/src/main/res/layout/: ab_main.xml  ab_receive.xml  ab_send.xml  ab_sync_progress.xml  activity_main.xml  balance_fragment.xml  button.xml  dashboard_fragment.xml  drawer_header_fragment.xml  drawer_layout.xml  gen_wallet_activity.xml  gen_wallet_fragment.xml  init_activity.xml  init_fragment.xml  item_history.xml  item_transaction.xml  menu_item.xml  qr_generator_activity.xml  qr_generator_fragment.xml  qr_reader_activity.xml  receive_fragment.xml  restore_wallet_activity.xml  restore_wallet_fragment.xml  send_fragment.xml  setting_activity.xml  settings_fragment.xml  sign_fragment.xml  toolbar.xml
app/src/main/res/layout/menu_fragments/layout/: dashboard_fragment.xml  drawer_header_fragment.xml  drawer_layout.xml  send_fragment.xml
app/src/main/res/menu/: drop_menu.xml  navigation_item.xml  qr_generator_menu.xml  setting_menu.xml
app/src/main/res/values/: colors.xml  dim.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml  preference.xml
app/src/test/java/com/example/root/monerotest/: ExampleUnitTest.java
distribution/Monero/include/contrib/epee/include/net/: http_client.h
distribution/Monero/include/contrib/epee/include/storages/: http_abstract_invoke.h
gradle/wrapper/: gradle-wrapper.properties
